# momentario

./: .dockerignore  .gitignore  .windsurfrules  DOCKERHUB_OVERVIEW.md  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
momentario/: __init__.py  cli.py
momentario/core/: media_processor.py
momentario/photo/: photo_processor.py
momentario/utils/: date_extractor.py
momentario/video/: video_processor.py
tests/: test_date_extractor.py
tests/video/: test_video_processor.py
